Better layout on mobile

--- a/web/app/themes/inside/assets/scss/components/title-banner.scss
+++ b/web/app/themes/inside/assets/scss/components/title-banner.scss
@@ -54,6 +54,11 @@
   text-orientation: mixed;
   writing-mode: tb-rl;
   text-align: center;
+
+  @include media-breakpoint-down(md) {
+    writing-mode: horizontal-tb;
+    text-align: left;
+  }
 }
 
 .page_title {
