--- a/web/app/themes/inside/views/page-section.twig
+++ b/web/app/themes/inside/views/page-section.twig
@@ -7,7 +7,7 @@
 		</h1>
 		<div>
 			{% if post.get_field('video') %}
-				<div class="d-flex">
+				<div class="d-flex flex-column-reverse flex-md-row mb-5 mb-md-1">
 					<div class="redif-frame ratio ratio-custom">
 						<div class="iframe-container">
 							<div class="ratio ratio-16x9">
