--- a/web/app/themes/inside/views/page.twig
+++ b/web/app/themes/inside/views/page.twig
@@ -6,7 +6,7 @@
 			{{post.title}}
 		</h1>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 mb-4 mb-md-0">
         <img class="img-fluid" style="aspect-ratio: {{ getAspectRatio(post.thumbnail.width, post.thumbnail.height) }};" src="{{ post.thumbnail.src("large") }}" alt="{{ post.thumbnail.alt }}">
       </div>
       <div class="col-md-6">
