--- a/web/app/themes/inside/views/sections/section-landing.twig
+++ b/web/app/themes/inside/views/sections/section-landing.twig
@@ -1,8 +1,31 @@
 <div class="container landing">
-  <h1 class="title mt-5 mb-4">Bienvenue à <u>eikon</u></h1>
-  <div class="mb-5">
-    <p class="description">
-      {{ post.content }}
-    </p>
-  </div>
+	<h1 class="title mt-5 mb-4">Bienvenue à
+		<u>eikon</u>
+	</h1>
+	<div class="mb-5">
+		<p class="description">
+			{{ post.content }}
+		</p>
+	</div>
+</div>
+<div class="container mb-5 pb-4">
+	<div class="row">
+		<div class="col-md-3 col-sm-6">
+			<img
+        src="{{ theme.link }}/dist/img/eikon-jpo-2022-poster.jpg"
+        class="w-100"
+        alt="Poster des Journées Portes Ouvertes 2022"
+      >
+		</div>
+    <div class="col-md-9 col-sm-6">
+      <h2 class="display-3 mb-3 text-uppercase">
+        Journees portes<br /> ouvertes 2022
+      </h2>
+      <p>
+        Les prochaines journées Portes Ouvertes auront lieu du 18 au 19 novembre 2022.<br/>
+        Le vendredi de 16h à 20h<br/>
+        Le samedi de 9h à 16h
+      </p>
+    </div>
+	</div>
 </div>
