Prepare the taxonomies to have section and years

--- a/web/app/themes/inside/views/single-project.twig
+++ b/web/app/themes/inside/views/single-project.twig
@@ -17,7 +17,7 @@
         <div class="mb-3">
           <h1>{{ post.title }}</h1>
           <span class="badge badge-dark">
-            {{ post.terms("years")[0].name }}
+            {{ post.terms("section")[0].name }}
           </span>
           <span class="badge">
             {{ post.terms("subjects")[0].name }}
