--- a/web/app/mu-plugins/eikonblocks-projects/src/editor.scss
+++ b/web/app/mu-plugins/eikonblocks-projects/src/editor.scss
@@ -9,3 +9,41 @@
   color: #fff;
   padding: 10px;
 }
+
+.list-projects {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  border: 1px solid #3333;
+  background-color: white;
+  max-height: 50vh;
+  overflow: scroll;
+
+  &.list-projects-selected button::before {
+      content: "✖️";
+      color: #d33;
+    }
+
+  &.list-projects-available button::after {
+    content: "➕";
+    color: #3a3;
+  }
+
+  button {
+    width: 100%;
+    padding: 5px;
+    background: transparent;
+    border: 0;
+    border-bottom: 1px solid #3333;
+    color: #000;
+    font-size: 14px;
+    display: flex;
+    justify-content: space-between;
+    opacity: 0.6;
+
+    &:hover {
+      opacity: 1;
+    }
+
+  }
+}
