Last touches on the gutenberg block prototypes

--- a/web/app/mu-plugins/eikonblocks-test/src/editor.scss
+++ b/web/app/mu-plugins/eikonblocks-test/src/editor.scss
@@ -5,7 +5,9 @@
  */
 
 .wp-block-eikonblocks-test {
-  background-color: #21759b;
-  color: #fff;
   padding: 10px;
+    border: 1px solid #3333;
+    background-color: #eee;
+    color: #333;
+    border-radius: 4px;
 }
