--- a/web/app/themes/inside/css/editor.css
+++ b/web/app/themes/inside/css/editor.css
@@ -1,5 +1,5 @@
 .wp-block select {
-  font-family: NoiGrotesk, sans-serif !important;
+  font-family: "eikon", sans-serif !important;
   color: inherit;
   border: 1px solid #999 !important;
   border-radius: 4px !important;
@@ -7,11 +7,11 @@
 }
 
 .wp-block label {
-  font-family: NoiGrotesk, sans-serif;
+  font-family: "eikon", sans-serif;
 }
 
 .wp-block input {
-  font-family: NoiGrotesk, sans-serif;
+  font-family: "eikon", sans-serif;
   width: 100% !important;
   border: 1px solid #999 !important;
   border-radius: 4px !important;
