--- a/web/app/themes/inside/css/editor.css
+++ b/web/app/themes/inside/css/editor.css
@@ -1,9 +1,41 @@
+.wp-block {
+  padding: 20px 20px 30px;
+}
+
+.wp-block h2{
+  margin: 0;
+  font-size: 14px;
+}
+
+.wp-block-list {
+  padding: 20px 20px 20px 40px !important;
+}
+
+.wp-block-list-item {
+  padding: 0 !important;
+}
+
+.eikonblock-title {
+  font-size: 0.8em;
+  font-style: italic;
+  margin: 0 0 20px 0;
+  padding: 0;
+  opacity: 0.5;
+}
+
+.wp-block-post-title {
+  padding: 0 20px;
+  background: none;
+}
+
 .wp-block select {
   font-family: "eikon", sans-serif !important;
   color: inherit;
   border: 1px solid #999 !important;
   border-radius: 4px !important;
   padding: 2px 6px !important;
+  background: white;
+  color: #333;
 }
 
 .wp-block label {
@@ -16,4 +48,58 @@
   border: 1px solid #999 !important;
   border-radius: 4px !important;
   padding: 2px 6px !important;
+}
+
+.list-items-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  border: 1px solid #3333;
+  background-color: white;
+  max-height: 50vh;
+  overflow: scroll;
+  border-radius: 4px;
+  box-shadow:
+    1px 1px 0px #3331,
+    2px 2px 0px #3331;
+}
+
+.list-item {
+  background-color: white;
+  border: 0;
+  border-bottom: 1px solid #3333;
+  color: #000;
+  font-size: 14px;
+  display: flex;
+  opacity: 0.6;
+  padding: 5px;
+}
+
+.list-item .image-thumbnail {
+  width: 3rem;
+  height: 3rem;
+  object-fit: cover;
+}
+
+.list-item .drag-handle {
+  padding-right: 5px;
+}
+
+.list-item:hover {
+  opacity: 1;
+}
+
+.list-item::after {
+  content: "➕";
+  color: #333;
+  align-self: flex-start;
+  margin-left: auto;
+}
+
+.list-item-available .list-item {
+  cursor: pointer;
+}
+
+.list-item-selected .list-item::after {
+  transform: rotate(45deg);
 }
