--- a/web/app/themes/inside/css/editor.css
+++ b/web/app/themes/inside/css/editor.css
@@ -1,5 +1,5 @@
 .wp-block {
-  padding: 20px 20px 30px;
+  padding: 10px 20px;
 }
 
 .wp-block h2{
@@ -18,7 +18,7 @@
 .eikonblock-title {
   font-size: 0.8em;
   font-style: italic;
-  margin: 0 0 20px 0;
+  margin: 0 0 10px 0;
   padding: 0;
   opacity: 0.5;
 }
