--- a/web/app/plugins/vod-video-field/assets/css/vod-video-field.css
+++ b/web/app/plugins/vod-video-field/assets/css/vod-video-field.css
@@ -15,13 +15,14 @@
 /* Video Preview */
 .vod-video-preview {
     display: flex;
+    flex-direction: column;
     gap: 15px;
     margin-bottom: 15px;
 }
 
 .vod-video-thumbnail {
     width: 100%;
-    height: 84px;
+    aspect-ratio: 16 / 9;
     background-color: #f0f0f0;
     border-radius: 3px;
     overflow: hidden;
@@ -161,11 +162,6 @@
     max-height: calc(80vh - 130px);
 }
 
-.vod-video-loading {
-    text-align: center;
-    padding: 20px;
-    color: #666;
-}
 
 .vod-video-no-results,
 .vod-video-error {
@@ -226,12 +222,15 @@
     text-overflow: ellipsis;
 }
 
+.vod-video-results {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 10px;
+}
+
+
 /* Responsive Adjustments */
 @media screen and (max-width: 782px) {
-    .vod-video-preview {
-        flex-direction: column;
-    }
-
     .vod-video-thumbnail {
         flex: none;
         width: 100%;
